# remix-rust-grpc-example

./: LICENSE  README.md
.github/workflows/: ci.yml
api/: .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yml
api/.sqlx/: query-5aef2d01e0127bdf633a4929030d62819473e19d33811ec21fbde64038b27966.json  query-5f88d8d1655d83aeb8b8ecd33d22e72666dbe852764d64285ca0ca8b3939fd12.json  query-75ca4739001a2d6691ca7a31499afef8860af039172d56856c855f38d8be5fc1.json  query-b7011e42a19ac985e8698cb831760c3c71878adfe7e5b11763a7c5f0f1d7e10a.json  query-f3ace2acc297d032fa179c949a86af4a8c8c2d37c1ca420e44df24d1f4aea64b.json
api/migrations/: 20240210142834_stocks.down.sql  20240210142834_stocks.up.sql  20240215075714_trades.down.sql  20240215075714_trades.up.sql
api/protos/: refdata.proto  trade.proto
api/src/: error.rs  lib.rs  main.rs  refdata.rs  services.rs  trade.rs
api/src/queries/: all_positions.sql  insert_trade.sql  upsert_position.sql
api/src/refdata/: models.rs  repository.rs  service.rs
api/src/trade/: models.rs  repository.rs  service.rs
api/tests/: refdata.rs  trade.rs
api/tests/fixtures/: stocks.sql
webapp/: .eslintignore  .eslintrc.cjs  .prettierignore  codegen.sh  components.json  package-lock.json  package.json
webapp/app/: entry.client.tsx  entry.server.tsx  globals.css  root.tsx
webapp/app/api/: refdata.server.ts  trade.server.ts
webapp/app/components/: order-form.tsx
webapp/app/components/ui/: alert.tsx  button.tsx  input.tsx  select.tsx  table.tsx
webapp/app/routes/: _index.tsx
