[package]
name = "trading-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
dotenvy = "0.15"
thiserror = "1.0"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
